--- a/calculo.html
+++ b/calculo.html
@@ -33,7 +33,7 @@
     </main> 
     <footer>
         <p>Site criado por
-            <a href="https://github.com/leoobrabo" target="_blank">Leonardo Motta</a>
+            <a href="https://github.com/Welingtonbriito" target="_blank">Welington Brito</a>
         </p>
     </footer>
     
